[package]
name = "tinyort"
version = "0.0.1"
edition = "2021"

[dependencies]
nix = { version = "0.26.4", features = ["mount", "sched", "unistd"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tar = "0.4"